--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,11 @@ jobs:
       - name: Get version tag
         run: |
           echo "TAG_NAME=$(cat version)" >> $GITHUB_ENV
+
+      - name: "Tag the build"
+        uses: EndBug/latest-tag@latest
+        with:
+          tag-name: ${{ env.TAG_NAME }}
           
       - name: Log in to Docker Hub
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
