Tagging the build after pushing image to docker

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,13 +17,8 @@ jobs:
 
       - name: Get version tag
         run: |
-          echo "TAG_NAME=$(cat version)" >> $GITHUB_ENV
+          echo "TAG_NAME=$(grep "__version__" webservice/__init__.py | awk -F'=' '{print $2}' | tr -d ' " ')" >> $GITHUB_ENV
 
-      - name: "Tag the build"
-        uses: EndBug/latest-tag@latest
-        with:
-          tag-name: ${{ env.TAG_NAME }}
-          
       - name: Log in to Docker Hub
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
@@ -37,3 +32,8 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: threatworx/gitlab_app_server:${{ env.TAG_NAME }}, threatworx/gitlab_app_server:latest
+          
+      - name: "Tag the build"
+        uses: EndBug/latest-tag@latest
+        with:
+          tag-name: ${{ env.TAG_NAME }}
